Update code for concatenate sms
